[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/enemies/slimeBlue_squashed.png" type="Texture" id=1]
[ext_resource path="res://Assets/enemies/slimeBlue.png" type="Texture" id=2]
[ext_resource path="res://Assets/enemies/slimeBlue_blue.png" type="Texture" id=3]
[ext_resource path="res://Scenes/ennemi/ennemi.gd" type="Script" id=4]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "crawl",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "squash",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 18, 11.75 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 55.5, 11.5 )

[node name="KinematicBody2D" type="KinematicBody2D"]
collision_layer = 16
collision_mask = 35
script = ExtResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
animation = "crawl"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1, 5.25 )
shape = SubResource( 1 )

[node name="floorChecker" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 20 )
collision_mask = 2

[node name="sideChecker" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 33

[node name="CollisionShape2D" type="CollisionShape2D" parent="sideChecker"]
position = Vector2( -35.5, 3.5 )
shape = SubResource( 3 )

[connection signal="body_entered" from="sideChecker" to="." method="_on_sideChecker_body_entered"]
